# AgentRuntime

./: .env.example  .gitignore  ADAPTER_PAYLOAD_FIXTURES.md  AGENTS.md  AGENT_REGISTRY_CONTRACT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_REPORT.md  CONTRIBUTING.md  DESIGN_PARTNER_RUNBOOK.md  E2E_TEST_PLAN.md  E2E_TEST_REPORT.md  LICENSE  MANIFEST.in  OPEN_SOURCE_AGENT_EVALUATION.md  PROVIDER_RUNTIME_COMPARISON_REPORT.md  README.md  REAL_AGENT_TEST_REPORT.md  RELEASE_CHECKLIST.md  ROADMAP.md  SCENARIO_TEST_REPORT.md  SECURITY.md  TEST_REPORT.md  USER_GUIDE.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_partner_feedback.yml  feature_request.yml  security_boundary_question.yml
.github/workflows/: ci.yml
docs/: README.md
docs/reference/: agent-registry-contract.md
docs/release/: release-checklist.md
docs/reports/: complete-report.md  e2e-test-report.md  open-source-agent-evaluation.md  real-agent-test-report.md  scenario-test-report.md  staging-validation-report.md  test-report.md
docs/runbooks/: design-partner-runbook.md
docs/superpowers/plans/: 2026-06-21-e2e-expansion-architecture.md  2026-06-21-e2e-expansion-implementation-plan.md  2026-06-21-e2e-expansion-interaction-spec.md  2026-06-21-e2e-expansion-qa-plan.md  2026-06-21-e2e-expansion-security-gate.md  2026-06-21-runtime-core-api-stabilization-architecture.md  2026-06-21-runtime-core-api-stabilization-implementation-plan.md
docs/superpowers/specs/: 2026-06-21-e2e-expansion-spec.md  2026-06-21-runtime-core-api-stabilization-spec.md
docs/test/: e2e-test-plan.md
examples/: agent_run_screenshot.py  complete_runtime_report.py  minimal_agent.py  openai_style_adapter.py  production_incident_comparison.py  staging_internal_admin_pilot.py
roles/overlays/: role-registry.overlay.json
roles/overlays/sandbox-isolation-reviewer/: SKILL.md  memory.md
src/agent_runtime/: __init__.py  certification.py  compatibility.py  release.py  run_view.py
src/agent_runtime/adapters/: __init__.py  langgraph_style.py  mcp_style.py  openai_style.py
src/agent_runtime/approval/: base.py  cli.py
src/agent_runtime/audit/: hash_chain.py  jsonl.py  sqlite.py  verify.py
src/agent_runtime/cli/: main.py
src/agent_runtime/control_plane/: __init__.py  platform.py  prelude.py
src/agent_runtime/core/: agent_session.py  models.py  registry.py  runtime.py
src/agent_runtime/execution/: base.py  in_process.py  sandbox.py  subprocess.py
src/agent_runtime/guard/: redaction.py
src/agent_runtime/observer/: __init__.py  memory.py
src/agent_runtime/pilot/: __init__.py  records.py
src/agent_runtime/policy/: engine.py
src/agent_runtime_contrib/: adapter_conformance.py  conformance.py  sandbox_conformance.py  sandbox_evidence.py
tests/: test_adapter_conformance_v13.py  test_adapter_payload_fixtures.py  test_adapter_release_v13.py  test_adapter_replay_cli.py  test_adapter_stabilization_v13.py  test_adapters_integration.py  test_agent_execution_session.py  test_agent_registry_contract.py  test_agent_run_screenshot.py  test_approval.py  test_audit_failure_policy.py  test_audit_runtime_execution.py  test_audit_tamper_evidence.py  test_audit_verify.py  test_capability_policy.py  test_certify_cli.py  test_cli.py  test_cli_contrib.py  test_cli_developer_preview.py  test_code_ci_pilot.py  test_complete_runtime_report.py  test_contrib_adapter_packs.py  test_contrib_conformance.py  test_contrib_dependency_boundary.py  test_contrib_pack_registry.py  test_contrib_sandbox_backends.py  test_control_plane_prelude.py  test_docker_sandbox_backend.py  test_docker_stable_candidate_gate.py  test_e2e_readiness.py  test_langgraph_agent_registration.py  test_models.py  test_observer.py  test_platform_integration_v15.py  test_platform_ready_v20.py  test_platform_release_v15.py  test_policy_audit_hardening.py  test_production_incident_agent.py  test_production_incident_comparison_example.py  test_production_pilot.py  (+18 more)
tests/e2e/: test_clean_wheel_install.py  test_complete_report_e2e.py  test_docker_sandbox_failure_paths_e2e.py  test_docker_sandbox_runtime_e2e.py  test_production_incident_run_view_e2e.py  test_run_view_browser_evidence_e2e.py  test_runtime_governance_matrix_e2e.py
(+31 files in other folders)
