[project]
name = "agent-runtime"
version = "1.0.0"
description = "Preview agent tool-call runtime"
requires-python = ">=3.12"

[project.optional-dependencies]
contrib-adapters = []
contrib-sandbox = []
pilot-code-ci = []
real-agents = []

[project.scripts]
agent-runtime = "agent_runtime.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_runtime*", "agent_runtime_contrib*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services or require local integration credentials",
]
