[project]
name = "agent-runtime"
version = "0.1.0"
description = "Technical preview runtime for governed agent tool calls"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Agent Runtime contributors" },
]
keywords = ["agent", "runtime", "policy", "audit", "sandbox", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
contrib-adapters = []
contrib-sandbox = []
pilot-code-ci = []
real-agents = []
framework-agents = ["langgraph"]
complete-report = ["pillow"]
dev = ["pytest", "pillow", "ruff", "pyright"]

[project.scripts]
agent-runtime = "agent_runtime.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_runtime*", "agent_runtime_contrib*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services or require local integration credentials",
]

[tool.ruff]
target-version = "py312"
line-length = 140
extend-exclude = [".agent-runtime"]

[tool.ruff.lint]
select = ["E9", "F"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
