[project]
name = "agent-runtime"
version = "0.1.0"
description = "Technical preview runtime for governed agent tool calls"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Agent Runtime contributors" },
]
keywords = ["agent", "runtime", "policy", "audit", "sandbox", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/magic-25/AgentRuntime"
Source = "https://github.com/magic-25/AgentRuntime"
Issues = "https://github.com/magic-25/AgentRuntime/issues"
Documentation = "https://github.com/magic-25/AgentRuntime/tree/main/docs"
Security = "https://github.com/magic-25/AgentRuntime/security"
Changelog = "https://github.com/magic-25/AgentRuntime/blob/main/CHANGELOG.md"

[project.optional-dependencies]
contrib-adapters = []
contrib-sandbox = []
pilot-code-ci = []
real-agents = []
framework-agents = ["langgraph"]
complete-report = ["pillow"]
dev = ["pytest", "pillow", "ruff", "pyright", "build", "twine"]

[project.scripts]
agent-runtime = "agent_runtime.cli.main:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_runtime*", "agent_runtime_contrib*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services or require local integration credentials",
]

[tool.ruff]
target-version = "py312"
line-length = 140
extend-exclude = [".agent-runtime"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
